# data_sci_viz

./: .gitignore  README.md  pyproject.toml
src/viz/: __init__.py  app.py  main.py
src/viz/data/: final_paper_format.json  format.json  papers.json  sample.json
