[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = 'viz'
version = '0.1.0'
authors = [
    { name = "Vivatsathorn Thitasirivit", email = "vivatsathorn@outlook.co.th" },
]
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "pydot",
    "streamlit",
    "plotly",
    "dash"
]
description = "Data Sci Project: Visualization"
keywords = ["datasci", "visualization"]
