[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = 'viz'
version = '0.1.0'
authors = [
    { name = "Vivatsathorn Thitasirivit", email = "vivatsathorn@outlook.co.th" },
    { name = "Theerin Petcharat" },
    { name = "Pipat Jongpipatchai" },
]
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "pydot",
    "streamlit",
    "plotly",
    "dash",
    "dash-deck",
    "dash-bootstrap-components",
    "pydeck"
]
description = "Data Sci Project: Visualization"
keywords = ["datasci", "visualization"]
readme = { file = "README.md", content-type = "text/markdown" }

[project.scripts]
viz = "viz:main"
