[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = 'viz'
requires-python = "==3.11.*"
version = '1.0.0'
authors = [
    { name = "Vivatsathorn Thitasirivit", email = "vivatsathorn@outlook.co.th" },
    { name = "Theerin Petcharat" },
    { name = "Pipat Jongpipatchai" },
]
dependencies = [
    "orjson",
    "ujson",
    "numpy",
    "scipy",
    "pandas",
    "matplotlib",
    "pydot",
    "streamlit",
    "plotly",
    "dash",
    "dash-deck",
    "dash-bootstrap-components",
    "pydeck",
    "networkx",
]
description = "Data Sci Project: Visualization"
keywords = ["datasci", "visualization"]
readme = { file = "README.md", content-type = "text/markdown" }

[project.scripts]
viz = "viz:main"

[[tool.poetry.source]]
name = "nvidia"
url = "https://pypi.nvidia.com"
priority = "explicit"